Took the time to really think about names a little
- or maybe it was a lot? now parsing names in several stages, first
  breaking them down into parts (respecting brackets), then
  identifying which case we are dealing with, and finally putting all
  parts into the right buckets, which are firstnames, propositions,
  lastnames, and suffixes. Returning an object.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -78,3 +78,50 @@
    year = 1988,
    note = "This is a full MASTERSTHESIS entry",
 }
+
+@article{DBLP:journals/aim/FeldmanKKNPGKG14,
+  author    = {Alexander Feldman and
+               Johan de Kleer and
+               Tolga Kurtoglu and
+               Sriram Narasimhan and
+               Scott Poll and
+               David Garcia and
+               Lukas D. Kuhn and
+               Arjan J. C. van Gemund},
+  title     = {The Diagnostic Competitions},
+  journal   = {{AI} Magazine},
+  volume    = {35},
+  number    = {2},
+  pages     = {49--54},
+  year      = {2014},
+  url       = {http://www.aaai.org/ojs/index.php/aimagazine/article/view/2532},
+  timestamp = {Mon, 28 Jul 2014 12:49:25 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/aim/FeldmanKKNPGKG14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/ai/LopezCO15,
+  author    = {Carlos {Linares L{\'{o}}pez} and
+               Sergio Jim{\'{e}}nez Celorrio and
+               Angel Garc{\'{\i}}a Olaya},
+  title     = {The deterministic part of the seventh International Planning Competition},
+  journal   = {Artif. Intell.},
+  volume    = {223},
+  pages     = {82--119},
+  year      = {2015},
+  url       = {http://dx.doi.org/10.1016/j.artint.2015.01.004},
+  doi       = {10.1016/j.artint.2015.01.004},
+  timestamp = {Wed, 22 Apr 2015 14:51:45 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/ai/LopezCO15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{hardtest,
+  author    = {Carlos {Linares L{\'{o}}pez} and
+               Christian Wilhelm de la Fritz Lang O'Brian, Jr. and 
+               de la Fritz Lang O'Brian, Christian Wilhelm, Jr. and
+               Christian Wilhelm {Fritz Lang O'Brian}, Jr. and 
+               Fritz Lang O'Brian, Christian Wilhelm, Jr.
+               },
+  title     = {testing bibtex parser}
+}
