--- a/test/test1.bib
+++ b/test/test1.bib
@@ -125,3 +125,19 @@
                },
   title     = {testing bibtex parser}
 }
+
+@article{marques_mossbauer_2009,
+	title = {Mossbauer spectroscopy study of iron oxide nanoparticles obtained by spray pyrolysis},
+	volume = {189},
+	issn = {0304-3843},
+	doi = {10.1007/s10751-009-9911-1},
+	abstract = {Mossbauer spectroscopy was used in this study to investigate magnetite nanoparticles, obtained by spray pyrolysis and thermal treatment under H-2 reduction atmosphere. Room temperature {XRD} data indicate the formation of magnetite phase and a second phase (metallic iron) which amount increases as the time of reduction under H2 is increased. While room temperature Mossbauer data confirm the formation of the cubic phase of magnetite and the occurrence of metallic iron phase, the more complex features of 77 K-Mossbauer spectra suggest the occurrence of electronic localization favored by the different crystalline phase of magnetite at low temperatures which transition to the lower symmetry structure should occur at T similar to 120 K (Verwey transition).},
+	language = {English},
+	number = {1-3},
+	journal = {Hyperfine Interactions},
+	author = {Marques, R. F. C. and Rodriguez, A. F. R. and Coaquira, J. a. H. and Santos, J. G. and Garg, V. K. and Jafelicci, M. and Ribeiro, S. J. L. and Verelst, M. and Dexpert-Ghys, J. and Morais, P. C.},
+	month = feb,
+	year = {2009},
+	keywords = {albumin, hematite, Magnetite, Mossbauer spectroscopy, spray pyrolysis},
+	pages = {159--166}
+}
