STRINGs were already working in original parser
.. until I broke it; fixed it now and also make string
case-insensitive

- also undid the / $/ -> \b replacement in latex regex; latex actuall
  removes that space, too

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -134,7 +134,7 @@
 	abstract = {Mossbauer spectroscopy was used in this study to investigate magnetite nanoparticles, obtained by spray pyrolysis and thermal treatment under H-2 reduction atmosphere. Room temperature {XRD} data indicate the formation of magnetite phase and a second phase (metallic iron) which amount increases as the time of reduction under H2 is increased. While room temperature Mossbauer data confirm the formation of the cubic phase of magnetite and the occurrence of metallic iron phase, the more complex features of 77 K-Mossbauer spectra suggest the occurrence of electronic localization favored by the different crystalline phase of magnetite at low temperatures which transition to the lower symmetry structure should occur at T similar to 120 K (Verwey transition).},
 	language = {English},
 	number = {1-3},
-	journal = {Hyperfine Interactions},
+	journal = {D\ae dalus Hyperfine Interactions},
 	author = {Marques, R. F. C. and Rodriguez, A. F. R. and Coaquira, J. a. H. and Santos, J. G. and Garg, V. K. and Jafelicci, M. and Ribeiro, S. J. L. and Verelst, M. and Dexpert-Ghys, J. and Morais, P. C.},
 	month = feb,
 	year = {2009},
