--- a/test/test2.bib
+++ b/test/test2.bib
@@ -45136,7 +45136,7 @@ La microscopie à haute résolution est actuellement dominée par les microscope
 	elucidation of consciousness and its material substrate.}
 }
 
-@ARTICLE{Koch_Tsuchiya07",
+@ARTICLE{Koch_Tsuchiya07,
   author = {Koch, C. and Tsuchiya, N. },
   title = {{{A}ttention and consciousness: two distinct brain processes}},
   journal = {Trends Cogn. Sci. (Regul. Ed.)},
